--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div id="headline" class="headline">
                   <span class="headline__subtitle">Let’s meet</span>
                   <!-- <img class=" animated-headline medium w-20" src="./img/svg/clock.svg" alt="hi"> -->
-                  <h1 style=" font-family:Libre Baskerville " class=" animated-headline medium">
+                  <h1 style="font-family:Libre Baskerville " class=" text-7xl animated-headline medium">
                     I'm Avishek Prasad   
                     <br>
                     <span id="typed-strings">
