--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                           <img src="img/portfolio/1.png" class="my-gallery__image" itemprop="thumbnail" alt="Image description" style="object-fit: cover;" />
                         </a>
                         <figcaption class="my-gallery__description block-rounded-l" itemprop="caption description">
-                          <h4 class="dark text-black">social media clone
+                          <h4 class="dark text-black">E-commerce Website
                             <small></small>
                           </h4>
                           <p>clone like socail media using laravel
