--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
               <!-- Bottom Button Start -->
               <div class="intro__button">
-                <a href="source-files/CV_Avishek.pdf" class="btn-bottom">
+                <a href="source-files/Cv_Avishek.pdf" class="btn-bottom">
                   <span class="circle">
                     <em></em>
                     <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px">
